// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStatusTimeline Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      <div
        class="layout row space-between align-center"
      >
        <div
          class="flex"
        >
          <h3>
            Event Status
          </h3>
        </div>
         
        <button
          class="white--text v-btn v-btn--round v-btn--small theme--light grey"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <div
              class="flex"
            >
              <i
                aria-hidden="true"
                class="v-icon white--text fa fa fa fa-times theme--light"
                style="font-size: 16px;"
              />
            </div>
             
            <div
              class="flex"
            >
              
          Close
        
            </div>
          </div>
        </button>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text grey--text"
    >
      <div
        class="v-timeline v-timeline--align-top v-timeline--dense theme--light"
      />
    </div>
     
    <hr
      class="v-divider theme--light"
    />
  </div>
</div>
`;

exports[`EventStatusTimeline Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      <div
        class="layout row space-between align-center"
      >
        <div
          class="flex"
        >
          <h3>
            Event Status
          </h3>
        </div>
         
        <button
          class="white--text v-btn v-btn--round v-btn--small theme--light grey"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <div
              class="flex"
            >
              <i
                aria-hidden="true"
                class="v-icon white--text fa fa fa fa-times theme--light"
                style="font-size: 16px;"
              />
            </div>
             
            <div
              class="flex"
            >
              
          Close
        
            </div>
          </div>
        </button>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text grey--text"
    >
      <div
        class="v-timeline v-timeline--align-top v-timeline--dense theme--light"
      >
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot success"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--dark"
              >
                check_circle_outline
              </i>
            </div>
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div>
                <strong>
                  Aug. 18
                </strong>
                 
                <p
                  class="caption mb-2"
                >
                  
              09:54 PM
            
                </p>
              </div>
               
              <div>
                <strong>
                  Draft: Completed
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Event was created in the system and submitted for approval
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot success"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--dark"
              >
                check_circle_outline
              </i>
            </div>
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div>
                <strong>
                  Aug. 19
                </strong>
                 
                <p
                  class="caption mb-2"
                >
                  
              09:58 PM
            
                </p>
              </div>
               
              <div>
                <strong>
                  FoodFleet Initial Review: Completed
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Food Fleet Staff will review the event request
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot warning lighten-2"
            />
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div />
               
              <div>
                <strong>
                  Customer Agreement
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Customer will review / sign event agreement and terms
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot grey lighten-2"
            />
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div />
               
              <div>
                <strong>
                  Fleet Member Selection
                </strong>
                 
                <div
                  class="caption"
                >
                  
              FoodFleet will define event menu and identify interested Fleet Members and authorize work order
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot grey lighten-2"
            />
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div />
               
              <div>
                <strong>
                  Customer Review
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Customer will review interested Fleet Members and authorize work order
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot grey lighten-2"
            />
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div />
               
              <div>
                <strong>
                  Fleet Member Contracts
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Approved Fleet Members will review and sign event contracts
            
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-timeline-item theme--light"
          medium=""
        >
          <div
            class="v-timeline-item__dot"
          >
            <div
              class="v-timeline-item__inner-dot grey lighten-2"
            />
          </div>
          <div
            class="v-timeline-item__body"
          >
            <div
              class="ff-event_status_timeline__item"
            >
              <div />
               
              <div>
                <strong>
                  Event Confirmation
                </strong>
                 
                <div
                  class="caption"
                >
                  
              Customer will review and sign the final event contract
            
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
  </div>
</div>
`;
